--- a/Emaflix/Frontend/src/components/css/Carrossel.css
+++ b/Emaflix/Frontend/src/components/css/Carrossel.css
@@ -1,32 +1,10 @@
-.box {
-    background-color: red;
-    width: 10px;
-    height: 10px;
+.imagem-carrosel-responsive {
+    max-width: 50vh;
+    border-radius: 8px;
 }
 
-.poster-carrossel {
-    max-width: 600px;
-    
+.alice-carousel__stage-item {
+    margin-left: 0.5vw;
+    margin-right: 0.5vw;
 }
 
-.swipe {
-    margin-top: 20px;
-}
-
-.container-poster {
-    max-width: 700px;
-}
-
-.container-poster h2 {
-    color: white;
-    text-align: center;
-    font-family: inter;
-    font-weight: 500;
-    position: relative;
-    overflow: hidden;
-}
-
-.swiper-slide-active .container-poster img {
-    max-width: 700px;
-    transition: 500ms;
-}
