--- a/Emaflix/Frontend/src/components/css/Navbar.css
+++ b/Emaflix/Frontend/src/components/css/Navbar.css
@@ -1,7 +1,6 @@
-
 .navbar {
     padding: 1rem 2rem;
-    background-color: rgb(255, 255, 255);
+    background-color: #040714;
     display: flex;
     justify-content: space-between;
     align-items: center;
