fix nav and carousel

--- a/Emaflix/Frontend/src/routes/css/Home.css
+++ b/Emaflix/Frontend/src/routes/css/Home.css
@@ -9,7 +9,7 @@
 
 .titulos-generos-home {
     font-family: inter;
-    color: #4cae4f;
+    color: white;
     margin-left: 2vw;
     margin-bottom:3vh ;
 }
