--- a/Emaflix/Frontend/src/components/css/Navbar.css
+++ b/Emaflix/Frontend/src/components/css/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    padding: 1rem 2rem;
+    padding: 1vh 1vw;
     background-color: #040714;
     display: flex;
     justify-content: space-between;
@@ -8,7 +8,8 @@
 
 .navbar ul {
     display: flex;
-    gap: 1rem;
+    gap: 0.5rem;
+    margin-right: 2vw;
 }
 
 .Home-logo {
@@ -19,7 +20,7 @@
 }
 
 .container-logo {
-    padding: 1rem 2rem;
+    padding: 0.5rem 1rem;
     cursor: pointer;
 }
 
@@ -29,7 +30,7 @@
 }
 
 .Home-logo h2 {
-    color: #4CAE4F;
+    color: white;
     font-family: inter;
     font-size: 2rem;
     letter-spacing: 0.3rem;
@@ -42,13 +43,17 @@
 .btn {
     display: flex;
     font-family: inter;
-    font-weight: medium;
-    color: white;
-    background-color: #4CAE4F;
-    padding: 1rem 2rem;
+    font-weight: 600;
+    font-size: 15px;
+    color: #4CAE4F;
+    border: 2px solid #4CAE4F ;
+    padding: 0.75rem 1.5rem;
     border-radius: 10px;
-    gap: 0.5rem;
-    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+    gap: 0.25rem;
+}
+
+.btn span {
+    font-size: 19px;
 }
 
 .btn:hover {
