--- a/Emaflix/Frontend/src/routes/css/MovieSide.css
+++ b/Emaflix/Frontend/src/routes/css/MovieSide.css
@@ -1,7 +1,98 @@
+.movie-side {
+    width: 100%;
+    height: 100vh;
+    background-color: #040714;
+}
+
+.container-info-gerais {
+    display: flex;
+    margin-bottom: 10px;
+    margin-left: 2vw;
+}
+
+.container-info-gerais h2 {
+    margin-right: 1vw;
+}
+
 .video-player {
     max-height: 30vh;
 }
+
 .video-container {
     display: flex;
-    justify-content: center;
+    margin-left: 2vw;
+}
+
+.container-info {
+    margin-top: 10px;
+}
+
+.container-info h2 {
+    color: white;
+    font-family: inter;
+}
+
+.container-info h3 {
+    color: white;
+    font-family: inter;
+    padding: 0.3vh 0.5vw;
+    border: 1px solid #4cae4f;
+}
+
+.container-info p {
+    color: white;
+    font-family: inter;
+    margin-left: 2vw;
+}
+
+.comments {
+    width: 50vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.comments h2 {
+    font-family: inter;
+    color: white;
+}
+
+
+.comments ul {
+    display: flex;
+    flex-direction: column;
+    width: 30vw;
+    color: white;
+    font-family: inter;
+    font-size: 13px;
+    max-height: 285px;
+    overflow-y: auto;
+    border: 1px solid #4cae4f;
+    border-radius: 4px;
+    padding: 10px;
+    margin-top: 10px;
+}
+
+
+.comments ul li {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    flex-wrap: wrap;
+    border: 1px solid green;
+    border-radius: 4px;
+    padding: 2vh 1vw;
+    margin-top: 10px;
+
+}
+
+.comentar {
+    background-color: #4cae4f;
+    color: white;
+    font-family: inter;
+    border: none;
+    border-radius: 4px;
+    padding: 2vh 1vw;
+    margin-top: 10px;
+    cursor: pointer;
 }
