--- a/Emaflix/Frontend/src/components/css/Card.css
+++ b/Emaflix/Frontend/src/components/css/Card.css
@@ -3,10 +3,14 @@
     border-radius: 8px;
     padding: 10px;
     width: 100%;
+    height: 33vh;
     max-width: 15vw;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     background-color: rgba(80, 40, 40, 0);
     margin-left:2vw;
+    display: flex;
+    flex-direction: column;
+
 }
 
 .card img {
@@ -17,7 +21,7 @@
 
 .card h2 {
     color: #4cae4f;
-    margin: 12px 0;
+    padding: 15px 0;
     font-size: 18px;
     text-align: center;
     font-family: inter;
