--- a/Emaflix/Frontend/src/components/css/Card.css
+++ b/Emaflix/Frontend/src/components/css/Card.css
@@ -1,5 +1,4 @@
 .card {
-    border: 1px solid #4cae4f;
     border-radius: 8px;
     padding: 10px;
     width: 100%;
@@ -13,17 +12,22 @@
 
 }
 
+.card-genero ul li {
+    color: white;
+    font-family: inter;
+    margin-top: 2px;
+}
+
 .card img {
     width: 100%;
     height: auto;
-    border-radius: 4px;
+    border-radius: 8px;
 }
 
 .card h2 {
-    color: #4cae4f;
-    padding: 15px 0;
+    color: white;
+    margin-top: 4px;
     font-size: 18px;
-    text-align: center;
     font-family: inter;
 }
 
