--- a/Emaflix/Frontend/src/routes/css/UsuarioConf.css
+++ b/Emaflix/Frontend/src/routes/css/UsuarioConf.css
@@ -2,31 +2,28 @@
     background-color: #040714;
     height: 1920px;
 }
-.usuarios-conf h1 {
+.usuarios-conf h2 {
+    font-family: inter;
     color: white;
-    margin-left: 1vw;
+    margin-left: 2.5vw;
 }
 
 .usuarios-conf ul {
+    margin-left: 2.5vw;
     margin-top: 1vh;
-    width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 
 .usuarios-conf ul li {
-    border: 1px solid #4CAE4F;
+    border-bottom: 1px solid #4CAE4F;
     border-radius: 8px;
     display: flex;
     margin: 1vh 0vw;
-    justify-content: space-around;
+    justify-content: space-between;
     width: 50%;
     height: 5vh;
     align-items: center;
-
-
 }
 .usuarios-conf ul li span h2 {
     color: white;
@@ -40,6 +37,7 @@
 }
 
 .usuarios-conf ul li span h3 {
+    font-family: inter;
     color: white;
     font-family: inter;
     justify-self: center;
@@ -48,6 +46,7 @@
 
 
 .usuarios-conf ul li span {
+    width: 10vw;
     display: flex;
     justify-content: center;
 }
@@ -60,7 +59,12 @@
     background-color: #4CAE4F;
 }
 
+.usuarios-conf ul li select option {
+    font-family: inter;
+}
+
 .usuarios-conf ul li button {
+    width: 5vw;
     border: none;
     font-family: inter;
     display: flex;
