--- a/Emaflix/Frontend/src/components/css/Card.css
+++ b/Emaflix/Frontend/src/components/css/Card.css
@@ -2,13 +2,14 @@
     border-radius: 8px;
     padding: 10px;
     width: 100%;
-    height: 33vh;
+    height: 27vh;
     max-width: 15vw;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     background-color: rgba(80, 40, 40, 0);
     margin-left: 2vw;
     display: flex;
     flex-direction: column;
+    transition: 500ms;
 
 }
 
@@ -20,6 +21,10 @@
     border: none;
     margin-left: 1vh;
     border-radius: 8px;
+}
+
+.card:hover {
+    max-width: 20vw;
 }
 
 .card-genero ul li {
