--- a/Emaflix/Frontend/src/routes/css/Filter.css
+++ b/Emaflix/Frontend/src/routes/css/Filter.css
@@ -14,7 +14,7 @@
 .filter input {
     border: none;
     padding-left: 20px;
-    border: 2px solid #4cae4f;
+    border: 2px solid #b495e2;
     border-radius: 8px;
     background-color:#040714 ;
     color: white;
