--- a/Emaflix/Frontend/src/routes/css/MovieSide.css
+++ b/Emaflix/Frontend/src/routes/css/MovieSide.css
@@ -1,6 +1,6 @@
 .movie-side {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background-color: #040714;
 }
 
@@ -24,7 +24,7 @@
 }
 
 .container-info {
-    margin-top: 10px;
+    margin: 10px
 }
 
 .container-info h2 {
@@ -46,7 +46,10 @@
 }
 
 .comments {
-    width: 50vw;
+    margin-right: 10px;
+    margin-left: 10px;
+    width: 50%;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -104,4 +107,27 @@
     padding: 2vh 1vw;
     margin-top: 10px;
     cursor: pointer;
+}
+
+@media screen and (max-width: 840px) {
+    .video-container {
+        padding-right: 16px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .comments ul {
+        width: 100%;
+    }
+    .comments {
+        width: 70%;
+    }
+    .container-info h3 {
+        margin-right: 5px;
+        padding: 0;
+        max-height: 30px;
+    }
+    .container-info h2 {
+        font-size: 20px;
+    }
 }
