Register login working

--- a/Emaflix/Frontend/src/routes/css/Login.css
+++ b/Emaflix/Frontend/src/routes/css/Login.css
@@ -7,6 +7,10 @@
     margin-top: 1vh; ;
 }
 
+.error .login-sucesso {
+    color: rgb(5, 189, 5);
+}
+
 .container-login-tela {
     width: 50vw;
     height: 100vh;
